--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "1bitsy-hardware"]
 	path = 1bitsy-hardware
 	url = https://github.com/1Bitsy/1bitsy-hardware.git
+[submodule "libopencm3"]
+	path = libopencm3
+	url = https://github.com/libopencm3/libopencm3.git
