--- a/labs/CMakeLists.txt
+++ b/labs/CMakeLists.txt
@@ -4,5 +4,7 @@ cmake_minimum_required(VERSION 3.9)
 #add_subdirectory(libs)
 
 add_subdirectory(01-miniblink)
+add_subdirectory(02-button)
+add_subdirectory(03-timer)
 
 
