--- a/labs/00-asm/Makefile
+++ b/labs/00-asm/Makefile
@@ -3,13 +3,12 @@ all: $(OUT)
 
 $(OUT): gpio-toggle.s link.ld
 	mkdir -p output
-	arm-none-eabi-as -mcpu=cortex-m4 gpio-toggle.s -c -o output/gpio-toggle.o
+	arm-none-eabi-as -mcpu=cortex-m4 gpio-toggle.s -c -g -o output/gpio-toggle.o
 	arm-none-eabi-ld -T link.ld output/gpio-toggle.o -o $@
 
 flash: $(OUT)
 	arm-none-eabi-gdb -n --batch 				\
-		-ex 'tar ext /dev/tty.usbmodemD5DB7BE81'  		\
-		-ex 'mon tpwr en'					\
+		-ex 'target extended-remote /dev/cu.usbmodemD5DB7BE81'  		\
 		-ex 'mon swdp_scan'					\
 		-ex 'att 1' 						\
 		-ex 'load' 							\
