--- a/labs/CMakeLists.txt
+++ b/labs/CMakeLists.txt
@@ -6,5 +6,6 @@ cmake_minimum_required(VERSION 3.9)
 add_subdirectory(01-miniblink)
 add_subdirectory(02-button)
 add_subdirectory(03-timer)
+add_subdirectory(04-timer-2)
 
 
