--- a/labs/02-button/Makefile
+++ b/labs/02-button/Makefile
@@ -2,6 +2,6 @@ OPENCM3_DIR = ../../libopencm3
 
 BINARY = button
 
-LDSCRIPT = ../stm32f4-1bitsy.ld
+LDSCRIPT = ../../stm32f4-1bitsy.ld
 
 include ../Makefile.include
