--- a/labs/CMakeLists.txt
+++ b/labs/CMakeLists.txt
@@ -3,8 +3,7 @@ cmake_minimum_required(VERSION 3.9)
 #include_directories(libs)
 #add_subdirectory(libs)
 
-add_subdirectory(02-button)
-add_subdirectory(03-timer)
-add_subdirectory(04-timer-2)
+add_subdirectory(03-external-irq)
+#add_subdirectory(04-systick)
 
 
